# TrustLens

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  good-first-issue.md
.github/workflows/: ci.yml
docs/: DESIGN_PRINCIPLES.md  EXPERIMENTAL.md  FUTURE_EXTENSIONS.md  GITHUB_ISSUES.md  POSITIONING.md  REWRITTEN_ISSUES.md  architecture.md  audience.md  features.md  index.md  problem.md  use_cases.md
examples/: calibration_deep_dive.py  cnn_vs_vit_trustlens.py  custom_plugin_demo.py  model_comparison.py  quickstart.py  trustlens_demo.ipynb
examples/trustlens_audit_report/: metadata.json  report.json  trust_score.json
tests/: __init__.py  test_api.py  test_bias.py  test_calibration.py  test_failure.py  test_output_formatting.py  test_plugins.py  test_representation.py  test_trust_score.py  test_utils.py
trustlens/: __init__.py  api.py  comparison.py  report.py  trust_score.py  utils.py
trustlens/explainability/: __init__.py  faithfulness.py  gradcam.py
trustlens/metrics/: __init__.py  bias.py  calibration.py  failure.py  faithfulness.py  representation.py
trustlens/plugins/: __init__.py  base.py  registry.py
trustlens/visualization/: __init__.py  bias_plots.py  calibration_plots.py  failure_plots.py  representation_plots.py  summary_plot.py
